objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev1_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dev1 Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dev2_Autonumber__c</fullName>
        <label>Dev2 Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Dev2_Field__c</fullName>
        <label>Dev2 Field</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Speaker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>